--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -17,20 +17,20 @@
   letter-spacing: 0.03em;
 }
 
-.site-nav__colortext,
-.link-prime-footer__adr {
+.site-nav__logo,
+.footer-adr__logo {
   color: $blue-text;
 }
 
-.link-prime__nav {
+.site-nav__colortex {
   color: $black-text;
 }
 
-.link-prime-footer__adr {
+.footer-adr__logo {
   color: $white-text;
 }
 
-.link-prime-footer__adr {
+.footer-adr__logo {
   display: inline-block;
   margin-bottom: 20px;
 }
