--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -7,7 +7,7 @@
   padding: 200px 0;
   text-align: center;
   background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-    url(../images/img-hero.jpg);
+    url(../images/hero-img.jpg);
 }
 
 .hero__title {
