--- a/sass/components/main/_staff.scss
+++ b/sass/components/main/_staff.scss
@@ -2,7 +2,7 @@
 
 .staff {
   padding: 94px 0;
-  background-color: $light-grey;
+  background-color: $graphite-text;
 }
 
 .staff-list {
@@ -13,7 +13,7 @@
 .staff-list__item {
   margin-right: 30px;
   width: calc((100% - 90px) / 4);
-  background-color: $bg-white;
+  background-color: $white-text;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
@@ -43,7 +43,7 @@
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  color: $grey-text;
+  color: $grey;
 }
 
 .social-network {
@@ -63,7 +63,7 @@
 
   transition-property: color, background-color, border-radius;
   transition-duration: 250ms;
-  transition-timing-function: $timing-function;
+  transition-timing-function: $anime-function;
 
   &:hover,
   &:focus {
